menu and second creen start

--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -11,6 +11,9 @@
         line-height: 24px;
         color: #ffffff;
     }
+    &_fz36 {
+        font-size: 36px;
+    }
     &_fz48 {
         font-size: 48px;
     }
