--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -1,9 +1,9 @@
 .title {
-    font-weight: bold;
+    font-weight: 700;
     font-size: 36px;
     line-height: 60px;
     &_fz14 {
-       font-style: 14px;
+       font-size: 14px;
        line-height: 21px; 
     }
     &_fz16 {
@@ -16,5 +16,14 @@
     }
     &_fz48 {
         font-size: 48px;
+    }
+    &_about {
+        color: black;
+        font-size: 16px;
+        line-height: 24px;
+    }
+    &_skills {
+        color: #000;
+        text-align: center;
     }
 }
