--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -26,4 +26,20 @@
         color: #000;
         text-align: center;
     }
+    &_portfolio {
+        color: #000;
+    }
+    &__section-title {
+        position: relative;
+        text-align: center;
+        @include before_circle;
+        &:before {
+            top: -6px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+    }
+    &__section-subtitle {
+        text-align: center;
+    }
 }
