--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -28,4 +28,7 @@
 @import 'blocks/sidepanel';
 @import 'blocks/menu';
 @import 'blocks/about';
-@import 'blocks/skills'
+@import 'blocks/skills';
+@import 'blocks/portfolio';
+@import 'blocks/contacts';
+@import 'blocks/media';
